--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="../message/qlists">消息列表</a></li>
-								<li><a href="icons.html">我的关注</a></li>
+								<li><a href="../attention/mygz">我的关注</a></li>
 							</ul>
 						</li>
 						<li><a href="contact.html">联系我们</a></li>
@@ -67,8 +67,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</nav>
 			<div class="header-right-w3ls">
-				<a href="login.html">登录</a>
-				<a href="register.html">注册</a>
+				<a href="../basic_message/tologin">登录</a>
+				<a href="../basic_message/toRegister">注册</a>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -80,22 +80,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="rslides" id="slider3">
 						<li>
 							<div class="w3ls-info">
-								<h4>Be fabulous. Be empowered. Be Blown Away!</h4>
-								<p>We’re Committed to Service Excellence By Elite Match.</p>
+								<h4>天下有情人终成眷属,前生注定,加结良缘!</h4>
+								<p>All shall be well, all shall be well, all shall be well.</p>
 							</div>
 
 						</li>
 						<li>
 							<div class="w3ls-info">
-								<h4>Dream it. Believe it. make it happen! </h4>
-								<p>Checkout our list of best services and plan to best Finding.</p>
+								<h4>同德同心，如鼓琴瑟，花开并蒂! </h4>
+								<p>Concentric with Germany, such as the harp, flowers bloom and stem.</p>
 							</div>
 
 						</li>
 						<li>
 							<div class="w3ls-info">
-								<h4>Be fabulous. Be empowered. Be Blown Away!</h4>
-								<p>Welcome to our Elite match - keep in touch with us...</p>
+								<h4>心心相印，同心永结!</h4>
+								<p>Heart to heart, concentric forever knot</p>
 							</div>
 
 						</li>
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="services" id="services">
 	<div class="container">
 		<div class="tittle-agileinfo">
-			<h3>Assisted Services</h3>
+			<h3>甜 蜜 服 务</h3>
 		</div>
 		<div class="col-md-6 w3_agileits_services_grids">
 			<div class="w3_agileits_services_grid">
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-search" aria-hidden="true"></i>
 					</div>
-					<h3>Search within reach</h3>
+					<h3><a href="../attention/search">搜索意中人</a></h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-list-alt" aria-hidden="true"></i>
 					</div>
-					<h3>Shortlisted matches</h3>
+					<h3>我要置顶</h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-phone" aria-hidden="true"></i>
 					</div>
-					<h3>Initiate communication</h3>
+					<h3>文字课堂</h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -155,7 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-users" aria-hidden="true"></i>
 					</div>
-					<h3>Meet the prospects</h3>
+					<h3>视频课堂</h3>
 				</div>
 			</div>
 			<div class="clearfix"> </div>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="test" id="clients">
 	<div class="container">
 		<div class="tittle-agileinfo">
-			<h3 class="white-w3ls">Happy Couples</h3>
+			<h3 class="white-w3ls">快乐夫妇</h3>
 		</div>
 		<div class="test-gri1">
 			<div id="owl-demo2" class="owl-carousel">
@@ -265,7 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--/gallery-->
 <div class="gallery" id="gallery">
 	<div class="tittle-agileinfo">
-		<h3>Together by Elite Match</h3>
+		<h3>我们在一起了啦!</h3>
 	</div>
 	<ul id="flexiselDemo1">
 		<li>
