--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- header -->
         <div class="header-inner">
             <h1 class="logo">
-                <a href="index.html">Elite<span>Match</span></a></h1>
+                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -55,25 +55,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="matches.html">Matches</a></li>
+                        <li><a href="index.html" class="active">首页</a></li>
+                        <li><a href="../basic_message/zhaoboy">找男友</a></li>
+                        <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
-                            <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" data-hover="Pages"
-                               role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="codes.html">Short Codes</a></li>
-                                <li><a href="icons.html">Icons</a></li>
+                                <li><a href="../message/qlists">消息列表</a></li>
+                                <li><a href="icons.html">我的关注</a></li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                        <li><a href="geren.html">会员</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"></div>
             </nav>
             <div class="header-right-w3ls">
-                <a href="login.html">Log In</a>
-                <a href="register.html">Register</a>
+                <a href="..basic_message/tologin">登录</a>
+                <a href="../basic_message/toRegister">注册</a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -86,9 +86,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="w3l_agileits_breadcrumbs_inner">
             <ul>
-                <li><a href="index.html">Home</a><span>&#187;</span></li>
+                <li><a href="index.html">主页</a><span>&#187;</span></li>
 
-                <li>Register</li>
+                <li>注册</li>
             </ul>
         </div>
     </div>
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="login elite-app">
     <div class="container">
         <div class="tittle-agileinfo">
-            <h3>Register Now</h3>
+            <h3>注册</h3>
         </div>
         <div class="col-md-8 login-form-w3-agile">
             <form id="reForm" action="Register" method="post">
