--- a/src/main/resources/templates/lists.html
+++ b/src/main/resources/templates/lists.html
@@ -31,43 +31,45 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-w3ls inner-banner-agileits" id="home">
 	<div class="container">
 		<!-- header -->
-                 <div class="header-inner">
-					  <h1 class="logo">
-						<a href="index.html">Elite<span>Match</span></a></h1>
-						<nav class="navbar navbar-default">
-							<div class="navbar-header">
-								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-							</div>
-							<!-- navbar-header -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<ul class="nav navbar-nav navbar-right">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
-									<li><a href="matches.html">Matches</a></li>
-									<li class="dropdown menu__item">
-										<a href="#" class="dropdown-toggle menu__link active"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
-										<ul class="dropdown-menu">
-											<li><a href="codes.html">Short Codes</a></li>
-											<li><a href="icons.html">Icons</a></li>
-										</ul>
-									</li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</div>
-							<div class="clearfix"> </div>	
-						</nav>
-						<div class="header-right-w3ls">
-							<a href="login.html">Log In</a>
-							<a href="register.html">Register</a>
-						</div>
-						<div class="clearfix"></div>
+		<div class="header-inner">
+			<h1 class="logo">
+				<a href="index.html">甜蜜<span>Sweet</span></a></h1>
+			<nav class="navbar navbar-default">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse"
+							data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 				</div>
-</div>			
+				<!-- navbar-header -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html" class="active">首页</a></li>
+						<li><a href="../basic_message/zhaoboy">找男友</a></li>
+						<li><a href="../basic_message/zhaogirl">找女友</a></li>
+						<li class="dropdown menu__item">
+							<a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../message/qlists">消息列表</a></li>
+								<li><a href="icons.html">我的关注</a></li>
+							</ul>
+						</li>
+						<li><a href="contact.html">联系我们</a></li>
+						<li><a href="geren.html">会员</a></li>
+					</ul>
+				</div>
+				<div class="clearfix"></div>
+			</nav>
+			<div class="header-right-w3ls">
+				<a href="../basic_message/tologin">登录</a>
+				<a href="../basic_message/toRegister">注册</a>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
 <!--//home-->
 <!--banner end here-->
@@ -76,9 +78,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">Home</a><span>&#187;</span></li>
+				<li><a href="index.html">主页</a><span>&#187;</span></li>
 									
-				<li>Codes</li>
+				<li>消息中心</li>
 				</ul>
 		</div>
 	</div>
