--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,10 +41,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- header -->
         <div class="header-inner">
             <h1 class="logo">
-                <a href="index.html">Elite<span>Match</span></a></h1>
+                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -54,24 +55,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">主页</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="matches.html">Matches</a></li>
+                        <li><a href="../basic_message/listAll" class="active">首页</a></li>
+                        <li><a href="../basic_message/zhaoboy">找男友</a></li>
+                        <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
-                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="codes.html">Short Codes</a></li>
-                                <li><a href="icons.html">Icons</a></li>
+                                <li><a href="../message/qlists">消息列表</a></li>
+                                <li><a href="icons.html">我的关注</a></li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                        <li><a href="geren.html">会员</a></li>
                     </ul>
                 </div>
-                <div class="clearfix"> </div>
+                <div class="clearfix"></div>
             </nav>
             <div class="header-right-w3ls">
-                <a href="tologin">登录</a>
-                <a href="toRegister">注册</a>
+                <a href="..basic_message/tologin">登录</a>
+                <a href="../basic_message/toRegister">注册</a>
             </div>
             <div class="clearfix"></div>
         </div>
