--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -116,12 +116,10 @@
 
 
 
-
 <form role="form" id="dejy" action="UpdDetails" method="post" style="margin-left:200px;" enctype="multipart/form-data">
     <input type="hidden" name="dmid" th:value="${Dlist.dmid}">
     <input type="hidden" name="bmid" th:value="${Dlist.bmid}">
-
-    <div class="form-group" style="margin-left:210px;">
+    <div class="form-group" style="margin:20px 210px;">
         <img id="idpic" th:src="${Dlist.pic}" width="100" height="140">
     </div>
     <div class="form-group" style="margin-left:215px;">
