--- a/src/main/resources/templates/GeRen.html
+++ b/src/main/resources/templates/GeRen.html
@@ -7,44 +7,79 @@
     <script src="../js/jquery-3.2.1.min.js"></script>
     <script src="../js/bootstrap-3.1.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="../css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/jquery-ui.css"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" media="all"/>
+    <!--fonts-->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
+    <!--//fonts-->
+
+
 </head>
 <body>
-<!--顶部-->
-<nav class="navbar navbar-inverse" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-                <span class="sr-only">切换导航</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <img src="img/logo_200.png" height="100%" />
-            </a>
+<div class="banner-w3ls inner-banner-agileits" id="home">
+    <div class="container">
+        <!-- header -->
+        <div class="header-inner">
+            <h1 class="logo">
+                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <!-- navbar-header -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="../basic_message/listAll" class="active">首页</a></li>
+                        <li><a href="../basic_message/zhaoboy">找男友</a></li>
+                        <li><a href="../basic_message/zhaogirl">找女友</a></li>
+                        <li class="dropdown menu__item">
+                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="../message/qlists">消息列表</a></li>
+                                <li><a href="icons.html">我的关注</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">联系我们</a></li>
+                        <li><a href="geren.html">会员</a></li>
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+            </nav>
+            <div class="header-right-w3ls">
+                <a href="../basic_message/tologin">退出</a>
+                <a href="../basic_message/toRegister">注册</a>
+            </div>
+            <div class="clearfix"></div>
         </div>
-        <div class="collapse navbar-collapse" id="example-navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a class="icon-bar" href="#">网站设置</a>
-                </li>
-                <li><a href="#">分类管理</a>
-                </li>
-                <li><a href="#">城市管理</a>
-                </li>
-                <li><a href="#">商品管理</a>
-                </li>
-                <li><a href="#">订单管理</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a>欢迎您,admin</a>
-                </li>
-                <li><a href="#">安全退出</a>
-                </li>
+    </div>
+</div>
+<!--//home-->
+<!--banner end here-->
+<!-- breadcrumbs -->
+<div class="w3l_agileits_breadcrumbs">
+    <div class="container">
+        <div class="w3l_agileits_breadcrumbs_inner">
+            <ul>
+                <li>主页<span>&#187;</span></li>
+
+                <li>个人中心</li>
             </ul>
         </div>
     </div>
-</nav>
+</div>
+
+<!--顶部-->
+
 
 <!--主体-->
 
