--- a/src/main/resources/templates/choose_mate.html
+++ b/src/main/resources/templates/choose_mate.html
@@ -18,7 +18,6 @@
 
             //给修改按钮设置单击事件
             $("#xiugai").click(function () {
-                alert(1);
                 //设置所有文本框/按钮/下拉框为可用
                 $("input[type='text']").removeAttr("disabled");
                 $("select").removeAttr("disabled");
@@ -33,7 +32,7 @@
 <form role="form" action="UpdChoose" method="post" style="margin-left:200px;">
     <input type="hidden" name="cmid" th:value="${Dlist.cmid}">
     <input type="hidden" name="bmid" th:value="${Dlist.bmid}">
-    <div class="form-group">
+    <div class="form-group" style="margin-top:20px;">
         <label for="lage">年龄</label><br>
         <select class="form-control" id="lage" name="lage" style="width: 245px; display: inline-block">
             <option value="0" th:selected="${Dlist.lage==0}">不限</option>
@@ -72,15 +71,15 @@
         <label for="monthly">月收入</label>
         <select class="form-control" id="monthly" name="monthly" style="width: 500px">
             <option value="0" th:selected="${Dlist.monthly==0}">不限</option>
-            <option value="2000" th:selected="${Dlist.monthly==2000}">3000元以下</option>
-            <option value="3000" th:selected="${Dlist.monthly==3000}">3000-4000</option>
-            <option value="4000" th:selected="${Dlist.monthly==4000}">4000-5000</option>
-            <option value="5000" th:selected="${Dlist.monthly==5000}">5000-6000</option>
-            <option value="6000" th:selected="${Dlist.monthly==6000}">6000-8000</option>
-            <option value="8000" th:selected="${Dlist.monthly==8000}">8000-10000</option>
-            <option value="10000" th:selected="${Dlist.monthly==10000}">10000-20000</option>
-            <option value="20000" th:selected="${Dlist.monthly==20000}">20000-50000</option>
-            <option value="50000" th:selected="${Dlist.monthly==50000}">50000元以上</option>
+            <option value="2000" th:selected="${Dlist.monthly==2000}">3k以下</option>
+            <option value="3000" th:selected="${Dlist.monthly==3000}">3k-4k</option>
+            <option value="4000" th:selected="${Dlist.monthly==4000}">4k-5k</option>
+            <option value="5000" th:selected="${Dlist.monthly==5000}">5k-6k</option>
+            <option value="6000" th:selected="${Dlist.monthly==6000}">6k-8k</option>
+            <option value="8000" th:selected="${Dlist.monthly==8000}">8k-10k</option>
+            <option value="10000" th:selected="${Dlist.monthly==10000}">10k-20k</option>
+            <option value="20000" th:selected="${Dlist.monthly==20000}">20k-50k</option>
+            <option value="50000" th:selected="${Dlist.monthly==50000}">50k以上</option>
         </select>
     </div>
     <div class="form-group">
