--- a/src/main/resources/templates/life_message.html
+++ b/src/main/resources/templates/life_message.html
@@ -18,7 +18,6 @@
 
             //给修改按钮设置单击事件
             $("#xiugai").click(function () {
-                alert(1);
                 //设置所有文本框/按钮/下拉框为可用
                 $("input[type='text']").removeAttr("disabled");
                 $("select").removeAttr("disabled");
@@ -33,9 +32,9 @@
 <form role="form" action="UpdLife" method="post" style="margin-left:200px;">
     <input type="hidden" name="lmid" th:value="${Dlist.lmid}">
     <input type="hidden" name="bmid" th:value="${Dlist.bmid}">
-    <div class="form-group">
+    <div class="form-group" style="margin-top:20px;">
         <label for="ptid">职业类型</label><br>
-        <select class="form-control" id="ptid" name="ptid" style="width: 500px; display: inline-block">
+        <select class="form-control" id="ptid" name="ptid" style="width: 500px; display: inline-block" >
             <option value="0" th:selected="${Dlist.ptid==0}">不限</option>
             <option value="1" th:selected="${Dlist.ptid==1}">销售</option>
             <option value="2" th:selected="${Dlist.ptid==2}">客户服务</option>
