--- a/src/main/resources/templates/boyfriend.html
+++ b/src/main/resources/templates/boyfriend.html
@@ -96,7 +96,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="team-row">
             <span th:each="b : ${boys}">
-                <div class="col-md-3 w3ls-team-grids" style="margin-right: 20px;margin-bottom: 10px">
+                <div class="col-md-3 w3ls-team-grids" style="margin-right: 20px;margin-bottom: 10px;height: 365px">
                         <h5 th:text="${b.bmname}"></h5>
                         <!--<p th:if="${b.soliloquy} == null">尚未填写内心独白</p><p th:if="${l.soliloquy} != null "><p th:text="${l.soliloquy}"></p></p>-->
                         <p th:text="${b.soliloquy}"></p>
