--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-phone" aria-hidden="true"></i>
 					</div>
-					<h3>文字课堂</h3>
+					<h3><a href="../class_text/showText">文字课堂</a></h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -155,7 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-users" aria-hidden="true"></i>
 					</div>
-					<h3>视频课堂</h3>
+					<h3><a href="../class_vido/showTV">视频课堂</a></h3>
 				</div>
 			</div>
 			<div class="clearfix"> </div>
