--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -101,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			</div>-->
 			<div>
-				<img th:src="${l.pic}">
+				<img th:src="${l.pic}" style="height: 382px;width:380px">
 			</div>
 			<div class="col-md-6 person-info-agileits-w3layouts" style="position:absolute;right: 10px;top:380px">
 				<ul>
