--- a/src/main/resources/templates/testClassroom.html
+++ b/src/main/resources/templates/testClassroom.html
@@ -7,19 +7,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://wwww.thymeleaf.org">
 <head>
-    <title>视频课堂</title>
+    <title>文字课堂</title>
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Elite Match Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-    function hideURLbar(){ window.scrollTo(0,1); } </script>
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design"/>
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
     <!-- //for-mobile-apps -->
-    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
     <link href="../css/font-awesome.css" rel="stylesheet">
-    <link href="../css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="../css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="../css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" media="all"/>
     <!--fonts-->
     <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
@@ -52,7 +57,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li><a href="../basic_message/zhaoboy">找男友</a></li>
                         <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
-                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" data-hover="Pages"
+                               role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="../message/qlists">消息列表</a></li>
                                 <li><a href="icons.html">我的关注</a></li>
@@ -81,7 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul>
                 <li><a href="index.html">主页</a><span>&#187;</span></li>
 
-                <li>视频课堂</li>
+                <li>文字课堂</li>
             </ul>
         </div>
     </div>
@@ -95,17 +101,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h3>课堂</h3>
         </div>
         <div class="team-row">
-            <span th:each="b : ${cv}">
-                <div class="col-md-3 w3ls-team-grids" style="margin-right: 20px;margin-bottom: 10px;height: 324px;width: 254px">
-                    <div th:text="${b.info}"></div>
-                    <input type="hidden" th:value="${b.voids}">
+            <span th:each="b : ${ct}">
+                <div class="col-md-3 w3ls-team-grids"
+                     style="margin-right: 20px;margin-bottom: 10px;height: 324px;width: 254px">
+                    <input type="hidden" th:value="${b.info}">
                     <div class="agileits-social">
                         <ul>
-                            <li><a onclick="setVoids(this)" href="#openTV"  data-toggle="modal"><i class="fa fa-twitter"><b class="fa fa-caret-square-o-right"></b></i></a></li>
+                            <li style="margin-top: 50px"><a onclick="setTest(this)" href="#openTV"
+                                                            data-toggle="modal"><i class="fa fa-twitter">详</i></a></li>
                         </ul>
                     </div>
-                    <div class="team-img" style='background:url("/sweet/images/bijiben.jpg") no-repeat;background-size:100% 100%;'>
-                        <h5 th:text="${b.cvname}" style="margin-top: 120px"></h5>
+                    <div class="team-img"
+                         style='background:url("/sweet/images/bijiben.jpg") no-repeat;background-size:100% 100%;'>
+                        <h5 th:text="${b.ctname}" style="margin-top: 120px"></h5>
                     </div>
                 </div>
             </span>
@@ -131,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <p>工作日（上午8点至晚上9点）</p>
                 <p>周日 (上午9点-下午1点)</p>
             </div>
-            <div class="clearfix"> </div>
+            <div class="clearfix"></div>
         </div>
         <!-- footer-button-info -->
         <div class="footer-middle-agileinfo">
@@ -178,16 +186,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 <!--模态框-->
-<div class="modal fade" id="openTV" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<div class="modal fade" id="openTV" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <button type="button" id="closeb" class="close" data-dismiss="modal" aria-hidden="true" style="margin-right: 10px">
-                &times;
-            </button>
-            <video width="600" height="400" controls  src="/sweet/TV/01.mp4" id="TV"  type="video/mp4">
-            您的浏览器不支持 HTML5 video播放器
-            </video>
-        </div><!-- /.modal-content -->
+
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    相亲小知识
+                </h4>
+            </div>
+            <div class="modal-body">
+                <button type="button" id="closeb" class="close" data-dismiss="modal" aria-hidden="true"
+                        style="margin-right: 10px">
+                    &times;
+                </button>
+                <div id="con">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
     </div><!-- /.modal -->
 </div>
 
@@ -205,8 +229,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         // Slideshow 3
         $("#slider3").responsiveSlides({
             auto: true,
-            pager:true,
-            nav:true,
+            pager: true,
+            nav: true,
             speed: 500,
             namespace: "callbacks",
             before: function () {
@@ -223,7 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--pop-up-box -->
 <script src="../js/jquery.magnific-popup.js" type="text/javascript"></script>
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         $('.popup-with-zoom-anim').magnificPopup({
             type: 'inline',
             fixedContentPos: false,
@@ -242,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- smooth scrolling -->
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
         /*
             var defaults = {
             containerID: 'toTop', // fading element id
@@ -251,25 +275,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             easingType: 'linear'
             };
         */
-        $().UItoTop({ easingType: 'easeOutQuart' });
+        $().UItoTop({easingType: 'easeOutQuart'});
     });
 </script>
 
 
-<a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+<a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover"
+                                                                         style="opacity: 1;"> </span></a>
 <!-- //smooth scrolling -->
 <!-- for-Clients -->
 <script src="../js/owl.carousel.js"></script>
 <!-- requried-jsfiles-for owl -->
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         $("#owl-demo2").owlCarousel({
-            items : 1,
-            lazyLoad : false,
-            autoPlay : true,
-            navigation : false,
-            navigationText :  false,
-            pagination : true,
+            items: 1,
+            lazyLoad: false,
+            autoPlay: true,
+            navigation: false,
+            navigationText: false,
+            pagination: true,
         });
     });
 </script>
@@ -279,25 +304,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="../js/move-top.js"></script>
 <script type="text/javascript" src="../js/easing.js"></script>
 <script type="text/javascript">
-    jQuery(document).ready(function($) {
-        $(".scroll").click(function(event){
+    jQuery(document).ready(function ($) {
+        $(".scroll").click(function (event) {
             event.preventDefault();
-            $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+            $('html,body').animate({scrollTop: $(this.hash).offset().top}, 1000);
         });
     });
 
-    function setVoids(isA) {
+    function setTest(isA) {
         //获取视频路径
-        let avlue=$(isA).parent("li").parent("ul").parent("div").prev().val();
+        let avlue = $(isA).parent("li").parent("ul").parent("div").prev().val();
         //设置视频路径
-        $("#TV").attr("src",avlue);
+        $("#con").html(avlue);
     }
 
-    $(function(){
-        $("#closeb").click(function () {
-            $("#TV").attr("src","");
-        })
-    })
 </script>
 <!-- start-smoth-scrolling -->
 <script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
